--- a/src/views/editPolicyBeneficiary.ejs
+++ b/src/views/editPolicyBeneficiary.ejs
@@ -56,13 +56,22 @@
                                     </div>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula</label>
-                                        <div class="col-sm-9">
+                                        <div class="col-sm-9 field">
+                                            <div class="numeral-selector selector">
+                                                <div class="select-box-wrapper">
+                                                    <select name="tipo_cedula_beneficiario" id="select_box">
+                                                        <option value="<%= beneficiary.tipo_cedula_beneficiario %>"><%= beneficiary.tipo_cedula_beneficiario %></option>
+                                                        <option value="V">V</option>
+                                                        <option value="E">E</option>
+                                                    </select>
+                                                </div>
+                                            </div>
                                             <input 
                                                 type="text"
                                                 name="cedula_beneficiario"
                                                 id="cedula_beneficiario"
-                                                value="<%= beneficiary.cedula_beneficiario %>" 
-                                                class="form-control cedula"
+                                                value="<%= beneficiary.cedula_beneficiario %>"
+                                                class="form-control input-numeral-cedula"
                                                 required
                                             >
                                         </div>
