--- a/src/views/editPolicyLife.ejs
+++ b/src/views/editPolicyLife.ejs
@@ -33,7 +33,7 @@
                                                 type="text"
                                                 name="numero_poliza"
                                                 id="numero_poliza"
-                                                value="<%= policy[0].numero_poliza %>"
+                                                value="<%= policy.numero_poliza %>"
                                                 class="form-control"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
@@ -46,7 +46,7 @@
                                             <div class="numeral-selector selector">
                                                 <div class="select-box-wrapper">
                                                     <select name="tipo_id_rif_tomador" id="select_box">
-                                                        <option value="<%= policy[0].tipo_id_rif_tomador %>"><%= policy[0].tipo_id_rif_tomador %></option>
+                                                        <option value="<%= policy.tipo_id_rif_tomador %>"><%= policy.tipo_id_rif_tomador %></option>
                                                         <option value="V">V</option>
                                                         <option value="E">E</option>
                                                         <option value="J">J</option>
@@ -60,7 +60,7 @@
                                                 type="text"
                                                 name="id_rif_tomador"
                                                 id="id_rif_tomador"
-                                                value="<%= policy[0].id_rif_tomador %>"
+                                                value="<%= policy.id_rif_tomador %>"
                                                 onkeyup="pasarNombreTomador();"
                                                 class="form-control input-numeral"
                                                 required
@@ -74,7 +74,7 @@
                                                 type="text"
                                                 name="nombre_tomador_poliza"
                                                 id="nombre_tomador_poliza"
-                                                value="<%= policy[0].nombre_tomador_poliza %>"
+                                                value="<%= policy.nombre_tomador_poliza %>"
                                                 class="form-control"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
@@ -88,7 +88,7 @@
                                                 type="email"
                                                 name="correo_tomador"
                                                 id="correo_tomador"
-                                                value="<%= policy[0].correo_tomador %>" 
+                                                value="<%= policy.correo_tomador %>" 
                                                 class="form-control"
                                                 required
                                             >
@@ -103,7 +103,7 @@
                                                             name="tomador_asegurado_poliza" 
                                                             id="tomador_asegurado_poliza" 
                                                             onclick="pasarNombreTomador();"
-                                                            <%= policy[0].tomador_asegurado_poliza === 1 ? 'checked': '' %>
+                                                            <%= policy.tomador_asegurado_poliza === 1 ? 'checked': '' %>
                                                         > 
                                                         ¿Asegurado mismo tomador?</label></div>
                                         </div>
@@ -262,7 +262,20 @@
                                                 type="text"
                                                 name="suma_asegurada_poliza"
                                                 id="suma_asegurada_poliza"
-                                                value="<%= sumaAsegurada %>"
+                                                value="<%= montoSumaAsegurada %>"
+                                                class="form-control currency_format"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Deducible</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="text"
+                                                name="deducible_poliza"
+                                                id="deducible_poliza"
+                                                value="<%= montoDeducible %>" 
                                                 class="form-control currency_format"
                                                 required
                                             >
@@ -274,26 +287,13 @@
                         <div class="col-lg-6">
                             <div class="ibox">
                                 <div class="form-control">
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Deducible</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="text"
-                                                name="deducible_poliza"
-                                                id="deducible_poliza"
-                                                value="<%= deducible %>" 
-                                                class="form-control currency_format"
-                                                required
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Grupo</label>
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
                                                 name="grupo_poliza"
                                                 id="grupo_poliza"
-                                                value="<%= policy[0].grupo_poliza %>" 
+                                                value="<%= policy.grupo_poliza %>" 
                                                 class="form-control"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                             >
@@ -303,7 +303,7 @@
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Moneda</label>
                                         <div class="col-sm-9">
                                             <select class="form-control" name="tipo_moneda_poliza" id="tipo_moneda_poliza" onchange="currencySignChange()" required>
-                                                <option value="<%= policy[0].tipo_moneda_poliza %>"><%= policy[0].tipo_moneda_poliza %></option>
+                                                <option value="<%= policy.tipo_moneda_poliza %>"><%= policy.tipo_moneda_poliza %></option>
                                                 <option value="BOLÍVAR">BOLÍVAR</option>
                                                 <option value="DÓLAR">DÓLAR</option>
                                                 <option value="EUROS">EUROS</option>
@@ -311,23 +311,95 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Prima Anual</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Prima Neta</label>
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="prima_anual_poliza"
-                                                id="prima_anual_poliza"
-                                                value="<%= primaAnual %>" 
+                                                name="prima_neta_poliza"
+                                                id="prima_neta_poliza"
+                                                value="<%= montoPrimaNeta %>" 
+                                                class="form-control currency_format"
+                                                onkeyup="premiumCalculation()"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">IGTF</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="text"
+                                                name="igtf_poliza"
+                                                id="igtf_poliza"
+                                                value="<%= montoIgtf %>" 
                                                 class="form-control currency_format"
                                                 required
                                             >
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Total Prima</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="text"
+                                                name="prima_total_poliza"
+                                                id="prima_total_poliza"
+                                                value="<%= montoPrimaTotal %>" 
+                                                class="form-control currency_format"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row" id="radioContainer">
+                                        <label class="col-sm-3 col-form-label">Fraccionamiento</label>
+                                        <div class="col-sm-9">
+                                            <div>
+                                                <label><input 
+                                                            type="checkbox" 
+                                                            name="fraccionamiento_boolean_poliza" 
+                                                            id="fraccionamiento_boolean_poliza"
+                                                            onclick="premiumCalculationDate()"
+                                                            <%= policy.fraccionamiento_boolean_poliza === 1 ? 'checked': '' %> 
+                                                        >  
+                                                        ¿Aplica Fraccionamiento?
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div id="active-select-1">
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="tipo_fraccionamiento_poliza" id="tipo_fraccionamiento_poliza" onchange="premiumCalculationDate()">
+                                                    <option value="<%= policy.tipo_fraccionamiento_poliza %>"><%= policy.tipo_fraccionamiento_poliza %></option>
+                                                    <option value="MENSUAL">MENSUAL</option>
+                                                    <option value="BIMESTRAL">BIMESTRAL</option>
+                                                    <option value="TRIMESTRAL">TRIMESTRAL</option>
+                                                    <option value="SEMESTRAL">SEMESTRAL</option>
+                                                    <option value="ANUAL">ANUAL</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Número de Pagos</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="number"
+                                                    step="0.01"
+                                                    name="numero_pago_poliza"
+                                                    id="numero_pago_poliza"
+                                                    value="<%= policy.numero_pago_poliza %>" 
+                                                    class="form-control"
+                                                >
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Canal</label>
                                         <div class="col-sm-9">
                                             <select class="form-control" name="tipo_canal_poliza" id="tipo_canal_poliza" onchange="showList()" required>
-                                                <option value="<%= policy[0].tipo_canal_poliza %>"><%= policy[0].tipo_canal_poliza %></option>
+                                                <option value="<%= policy.tipo_canal_poliza %>"><%= policy.tipo_canal_poliza %></option>
                                                 <option value="REDES SOCIALES">REDES SOCIALES</option>
                                                 <option value="PÁGINA WEB">PÁGINA WEB</option>
                                                 <option value="ÁREA BY ATINA">ÁREA BY ATINA</option>
@@ -423,7 +495,7 @@
                                 type="hidden"
                                 name="id_poliza"
                                 id="id_poliza"
-                                value="<%= policy[0].id_poliza %>"
+                                value="<%= policy.id_poliza %>"
                                 class="form-control"
                             >
                         </div>
